--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codepen-Code editor-BY NIDHI UPMAN</title>
+    <title>Codepen-Code editor - BY NIDHI UPMAN</title>
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -13,6 +13,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+<div>
+    <center>
+        <h2>Codepen-Code editor - BY NIDHI UPMAN</h2>
+    </center>
+</div>
 
 <body>
     <div class="container">
